--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,7 @@
 @import url(../node_modules/bootstrap/dist/css/bootstrap.min.css);
+
+body {
+    background: rgb(95,133,252);
+    background: linear-gradient(90deg, rgba(95,133,252,1) 0%, rgba(196,109,253,1) 100%);
+    color: white;
+}
