--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,31 +1,84 @@
-.navbar {
-    border-radius: 15px;
-    background-color: lightblue;
-    padding: 0;
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-transform: uppercase;
 
-    a {
-        margin: 8px 16px;
-        border-radius: 15px;
-        display: inline-block;
-        font-size: 20px;
-        text-transform: uppercase;
-        color: rgba($color: #000000, $alpha: .7);
-
-        &:after {
-            content: '';
-            display: block;
-            width: 0;
-            height: 2px;
-            background: rgba($color: #000000, $alpha: .8);
-            transition: width .3s;
+    .logo {
+        display:  flex;
+        align-items: center;
+        
+        img {
+            width: 50px;
+            height: auto;
         }
+        
+        a {
+            margin: 0 10px;
+            font-weight: 700;
+            font-size: 20px;
 
-        &:hover::after {
-            width: 100%;
+            &:hover {
+                color : rgba($color: white, $alpha: .8);
+            }
         }
     }
 
-    .active {
-        font-weight: 700;
+    .add-search {
+        display: flex;
+        align-items: center;
+
+        a {
+            font-weight:500;
+
+            &:hover {
+                color : rgba($color: white, $alpha: .8);
+            }
+        }
+
+        .searchBox {
+            background: rgba($color: white, $alpha: .6);
+            height: 40px;
+            border-radius: 40px;
+            margin-left: 15px;
+
+            &:hover .searchInput {
+                width: 200px;
+                padding: 0 10px;
+            }
+
+            &:hover .searchButton {
+                background: rgba($color: white, $alpha: .7);
+                color : rgba($color: black, $alpha: .6);
+            }
+
+            .searchButton {
+                color: rgba($color: black, $alpha: .6);
+                float: right;
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                background: rgba($color: white, $alpha: .5);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                transition: 0.4s;
+                border: none;
+            }
+
+            .searchInput {
+                border: none;
+                background: none;
+                outline: none;
+                float: left;
+                padding: 0;
+                color: white;
+                font-size: 16px;
+                transition: 0.4s;
+                line-height: 40px;
+                width: 0px;
+            }
+        }
     }
+
 }
