--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -29,15 +29,15 @@
         margin: 20px auto;
         font-size: 22px;
         text-decoration: none;
-        border: 1px solid rgba($color: #000000, $alpha: .6);
+        border: 1px solid rgba($color: white, $alpha: .5);
         border-radius: 10px;
-        color: rgba($color: #000000, $alpha: .7);
-        background-color: rgba($color: #add8e6, $alpha: .3);
+        color: rgba($color: white, $alpha: 1);
+        background-color: rgba($color: white, $alpha: .2);
 
         &:hover {
-            background-color: rgba($color: #add8e6, $alpha: .5);
-            border: 1px solid rgba($color: #000000, $alpha: .8);
-            color: rgba($color: #000000, $alpha: .8);
+            background-color: rgba($color: white, $alpha: .3);
+            border: 1px solid rgba($color: white, $alpha: .6);
+            color: rgba($color: white, $alpha: 1);
         }
     }
 }
