--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,58 @@
 @import url(../node_modules/bootstrap/dist/css/bootstrap.min.css);
 
+// fonts
+@font-face {
+    font-family: 'RobotoCondensed-Bold';
+    src: local('RobotoCondensed-Bold'),
+    url('./assets/fonts/RobotoCondensed-Bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'RobotoCondensed-Medium';
+    src: local('RobotoCondensed-Medium'),
+    url('./assets/fonts/RobotoCondensed-Medium.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'RobotoCondensed-Regular';
+    src: local('RobotoCondensed-Regular'),
+    url('./assets/fonts/RobotoCondensed-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'RobotoCondensed-Light';
+    src: local('RobotoCondensed-Light'),
+    url('./assets/fonts/RobotoCondensed-Light.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'RobotoCondensed-Thin';
+    src: local('RobotoCondensed-Thin'),
+    url('./assets/fonts/RobotoCondensed-Thin.ttf') format('truetype');
+}
+
+.font-bold {
+    font-family: 'RobotoCondensed-Bold';
+}
+
+.font-medium {
+    font-family: 'RobotoCondensed-Medium';
+}
+
+.font-regular {
+    font-family: 'RobotoCondensed-Regular';
+}
+
+.font-light {
+    font-family: 'RobotoCondensed-Light';
+}
+
+.font-thin {
+    font-family: 'RobotoCondensed-Thin';
+}
+
 body {
-    background: rgb(95,133,252);
-    background: linear-gradient(90deg, rgba(95,133,252,1) 0%, rgba(196,109,253,1) 100%);
+    background: #ebebeb;
     color: white;
+    font-family: 'RobotoCondensed-Regular';
 }
