--- a/src/pages/NewContact/NewContact.scss
+++ b/src/pages/NewContact/NewContact.scss
@@ -1,62 +1,65 @@
+.app-background {
+    background-color: white;
+}
+
 .AddPage {
-    background: rgba($color: white, $alpha: .4);
-    width: 400px;
-    padding: 40px 0;
-    border-radius: 20px;
-    margin: 50px auto;
-    text-align: center;
+    margin: 0 auto;
+    background-color: white;
     text-transform: uppercase;
-    box-shadow: 0 0 10px rgb(230, 230, 230);
     animation: opacityChange .8s;
+    color: #555555;
+    padding: 50px;
+    max-width: 800px;
 
     h1 {
-        font-size: 30px;
-        margin: 10px auto;
-        font-weight: 700;
+        font-size: 25px;
+    }
+
+    form > div {
+        margin-bottom: 15px;
     }
 
     label {
         display: block;
-        font-size: 18px;
-        font-weight: 500;
-        margin: 10px 0 0;
+        font-size: 16px;
+        margin: 5px;
     }
 
     input:not(input[type='checkbox']), select {
-        width: 250px;
         height: 40px;
-        border-radius: 10px;
+        width: 100%;
         padding: 3px 16px;
-        font-size: 20px;
-        border: none;
         line-height: 40px;
+        font-size: 16px;
+        border-radius: 10px;
+        background-color: #fafafa;
+        border: 2px solid #f1f1f1;
 
         &:focus {
             outline: none;
-            border: 1px solid grey;
+            border: 2px solid #dbdbdb;
         }
     }
 
     input[type='checkbox'] {
-        width: 2em;
-        height: 2em;
-        background-color: white;
+        width: 1.7em;
+        height: 1.7em;
         border-radius: 50%;
+        border: 2px solid #dbdbdb;
         vertical-align: middle;
-        border: 1px solid #ddd;
         appearance: none;
         -webkit-appearance: none;
         outline: none;
         cursor: pointer;
 
         &:checked {
-            background-color: rgba(255, 0, 0, 0.3);
+            background-color: #f9d94a;
         }
     }
 
     p {
         animation: opacityChange .8s;
-        margin: 0;
+        margin: 5px 5px 0;
         font-size: 12px;
     }
 
@@ -64,23 +67,20 @@
         width: 100px;
         padding: 8px 16px;
         border-radius: 10px;
-        margin: 10px 0;
-        border: none;
+        margin-top: 10px;
         text-transform: uppercase;
+        background-color: #4372d9;
+        border: none;
+        color: white;
 
-        &:hover {
-            background-color: rgb(236, 236, 236);
-            outline: 1px solid darkgrey;
-        }
-        
+        &:hover, 
         &:focus {
-            background-color: lightgrey;
-            outline: 1px solid grey;
+            background-color: #3f6bca;
         }
     }
 }
 
 @keyframes opacityChange {
-    0% {opacity: 0%;}
-    100% {opacity: 100%;}
+    0% {opacity: 0%}
+    100% {opacity: 100%}
 }
