--- a/src/Components/ContactItem/ContactItem.scss
+++ b/src/Components/ContactItem/ContactItem.scss
@@ -1,18 +1,46 @@
 .contactItem {
-    text-transform: uppercase;
-    padding: 0 10px;
+    padding: 0;
     animation: opacityChange .8s;
     height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    color: #555555;
+
+    button {
+        padding: 0;
+        border: none;
+        background: none;
+        width: auto;
+        height: auto;
+        border-radius: 50%;
+    }
+
+    .row {
+        margin: 0 0 10px;
+
+        > div:last-child button:first-child {
+            margin-right: 10px;
+        }
+    }
+
+    .favorite-icon {
+        color: #f9d94a;
+    }
+
+    .name-number {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .person {
+        display: flex;
+        align-items: center;
+        padding: 0;
+    }
 
     img {
-        width: 100px;
-        height: 100px;
+        margin: 0 10px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
-        margin-right: 20px;
     }
 
     > div {
@@ -20,18 +48,16 @@
         display: flex;
         align-items: center;
         margin-bottom: 10px;
-        background-color: #f3f3f3;
-        padding: 20px;
-        color: black;
         
         h3 {
             font-size: 16px;
+            margin: 0;
         }
 
         p {
+            text-align: left;
             margin: 0;
             font-size: 14px;
-            
         }
     }
 }
