--- a/src/Components/ContactItem/ContactItem.scss
+++ b/src/Components/ContactItem/ContactItem.scss
@@ -16,7 +16,7 @@
     .row {
         margin: 0 0 10px;
 
-        > div:last-child button:first-child {
+        > div:last-child a:first-child {
             margin-right: 10px;
         }
     }
