--- a/src/pages/NewContact/NewContact.scss
+++ b/src/pages/NewContact/NewContact.scss
@@ -16,7 +16,7 @@
     }
 
     form > div {
-        margin-bottom: 15px;
+        margin-bottom: 20px;
     }
 
     label {
@@ -59,7 +59,7 @@
 
     p {
         animation: opacityChange .8s;
-        margin: 5px 5px 0;
+        margin: 0 5px 0;
         font-size: 12px;
     }
 
