--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -18,6 +18,85 @@
             &:first-child {
                 border-bottom: 1px solid #dbdbdb;
             }
+
+            .addBtn {
+                background: none;
+                border: none;
+                padding: 0;
+            }
+        }
+    }
+
+    button {
+        background: none;
+        border: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .editDelete {
+        width: 270px;
+        animation: opacityChange .5s;
+        background-color: rgba($color: #000000, $alpha: .1);
+        text-align: center;
+    }
+
+    .addCategory,
+    .editCategory {
+        animation: opacityChange .8s;
+        width: 400px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        background-color: white;
+        padding: 30px 50px;
+        box-shadow: 0 0 10px lightgrey;
+        border-radius: 10px;
+
+        h1 {
+            font-size: 25px;
+            margin-bottom: 20px;
+        }
+    
+        input {
+            display: block;
+            margin: 10px 0 5px;
+            height: 40px;
+            width: 100%;
+            padding: 3px 16px;
+            line-height: 40px;
+            font-size: 16px;
+            border-radius: 10px;
+            background-color: #fafafa;
+            border: 2px solid #f1f1f1;
+    
+            &:focus {
+                outline: none;
+                border: 2px solid #dbdbdb;
+            }
+        }
+
+        p {
+            animation: opacityChange .8s;
+            margin: 0 5px 0;
+            font-size: 12px;
+        }
+
+        button {
+            width: 100px;
+            padding: 8px 16px;
+            border-radius: 10px;
+            text-transform: capitalize;
+            background-color: #4372d9;
+            border: none;
+            float: right;
+            color: white;
+            margin-top: 20px;
+    
+            &:hover, 
+            &:focus {
+                background-color: #3f6bca;
+            }
         }
     }
 }
