--- a/src/pages/NewContact/NewContact.scss
+++ b/src/pages/NewContact/NewContact.scss
@@ -1,83 +1,86 @@
 .app-background {
     background-color: white;
-}
 
-.AddPage {
-    margin: 0 auto;
-    background-color: white;
-    text-transform: capitalize;
-    animation: opacityChange .8s;
-    color: #555555;
-    padding: 50px;
-    max-width: 800px;
-
-    h1 {
-        font-size: 25px;
-    }
-
-    form > div {
-        margin-bottom: 20px;
-    }
-
-    label {
-        display: block;
-        font-size: 16px;
-        margin: 5px;
-    }
-
-    input:not(input[type='checkbox']), select {
-        height: 40px;
-        width: 100%;
-        padding: 3px 16px;
-        line-height: 40px;
-        font-size: 16px;
-        border-radius: 10px;
-        background-color: #fafafa;
-        border: 2px solid #f1f1f1;
-
-        &:focus {
-            outline: none;
-            border: 2px solid #dbdbdb;
-        }
-    }
-
-    input[type='checkbox'] {
-        width: 1.7em;
-        height: 1.7em;
-        border-radius: 50%;
-        border: 2px solid #dbdbdb;
-        vertical-align: middle;
-        appearance: none;
-        -webkit-appearance: none;
-        outline: none;
-        cursor: pointer;
-
-        &:checked {
-            background-color: #f9d94a;
-        }
-    }
-
-    p {
-        animation: opacityChange .8s;
-        margin: 0 5px 0;
-        font-size: 12px;
-    }
-
-    button {
-        width: 100px;
-        padding: 8px 16px;
-        border-radius: 10px;
-        margin-top: 10px;
+    .AddPage {
+        margin: 0 auto;
+        padding: 50px;
+        max-width: 800px;
+        background-color: white;
+        color: #555555;
         text-transform: capitalize;
-        background-color: #4372d9;
-        border: none;
-        color: white;
+        animation: opacityChange .8s;
+    
+        h1 {
+            font-size: 25px;
+        }
+    
+        form {
+            > div{
+                margin-bottom: 20px;
+            }
 
-        &:hover, 
-        &:focus {
-            background-color: #3f6bca;
+            label {
+                display: block;
+                font-size: 16px;
+                margin: 5px;
+            }
+
+            input:not(input[type='checkbox']), select {
+                width: 100%;
+                height: 40px;
+                padding: 3px 16px;
+                line-height: 40px;
+                font-size: 16px;
+                border-radius: 10px;
+                background-color: #fafafa;
+                border: 2px solid #f1f1f1;
+        
+                &:focus {
+                    outline: none;
+                    border: 2px solid #dbdbdb;
+                }
+            }
+            
+            input[type='checkbox'] {
+                width: 1.7em;
+                height: 1.7em;
+                border-radius: 50%;
+                border: 2px solid #dbdbdb;
+                vertical-align: middle;
+                appearance: none;
+                -webkit-appearance: none;
+                outline: none;
+                cursor: pointer;
+        
+                &:checked {
+                    background-color: #f9d94a;
+                }
+            }
+        
+            p {
+                margin: 0 5px 0;
+                font-size: 12px;
+                animation: opacityChange .8s;
+            }
+
+            button {
+                width: 100px;
+                margin-top: 10px;
+                padding: 8px 16px;
+                border-radius: 10px;
+                background-color: #4372d9;
+                color: white;
+                text-transform: capitalize;
+                border: none;
+        
+                &:hover, 
+                &:focus {
+                    background-color: #3f6bca;
+                }
+            }
         }
     }
+    
 }
 
 @keyframes opacityChange {
