--- a/src/App.scss
+++ b/src/App.scss
@@ -2,57 +2,57 @@
 
 // fonts
 @font-face {
-    font-family: 'RobotoCondensed-Bold';
-    src: local('RobotoCondensed-Bold'),
-    url('./assets/fonts/RobotoCondensed-Bold.ttf') format('truetype');
+    font-family: "RobotoCondensed-Bold";
+    src: local("RobotoCondensed-Bold"),
+    url("./assets/fonts/RobotoCondensed-Bold.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'RobotoCondensed-Medium';
-    src: local('RobotoCondensed-Medium'),
-    url('./assets/fonts/RobotoCondensed-Medium.ttf') format('truetype');
+    font-family: "RobotoCondensed-Medium";
+    src: local("RobotoCondensed-Medium"),
+    url("./assets/fonts/RobotoCondensed-Medium.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'RobotoCondensed-Regular';
-    src: local('RobotoCondensed-Regular'),
-    url('./assets/fonts/RobotoCondensed-Regular.ttf') format('truetype');
+    font-family: "RobotoCondensed-Regular";
+    src: local("RobotoCondensed-Regular"),
+    url("./assets/fonts/RobotoCondensed-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'RobotoCondensed-Light';
-    src: local('RobotoCondensed-Light'),
-    url('./assets/fonts/RobotoCondensed-Light.ttf') format('truetype');
+    font-family: "RobotoCondensed-Light";
+    src: local("RobotoCondensed-Light"),
+    url("./assets/fonts/RobotoCondensed-Light.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'RobotoCondensed-Thin';
-    src: local('RobotoCondensed-Thin'),
-    url('./assets/fonts/RobotoCondensed-Thin.ttf') format('truetype');
+    font-family: "RobotoCondensed-Thin";
+    src: local("RobotoCondensed-Thin"),
+    url("./assets/fonts/RobotoCondensed-Thin.ttf") format("truetype");
 }
 
 .font-bold {
-    font-family: 'RobotoCondensed-Bold';
+    font-family: "RobotoCondensed-Bold";
 }
 
 .font-medium {
-    font-family: 'RobotoCondensed-Medium';
+    font-family: "RobotoCondensed-Medium";
 }
 
 .font-regular {
-    font-family: 'RobotoCondensed-Regular';
+    font-family: "RobotoCondensed-Regular";
 }
 
 .font-light {
-    font-family: 'RobotoCondensed-Light';
+    font-family: "RobotoCondensed-Light";
 }
 
 .font-thin {
-    font-family: 'RobotoCondensed-Thin';
+    font-family: "RobotoCondensed-Thin";
 }
 
 body {
     background: #ebebeb;
     color: white;
-    font-family: 'RobotoCondensed-Regular';
+    font-family: "RobotoCondensed-Regular";
 }
