--- a/src/pages/NewContact/NewContact.scss
+++ b/src/pages/NewContact/NewContact.scss
@@ -9,13 +9,13 @@
         color: #555555;
         text-transform: capitalize;
         animation: opacityChange .8s;
-    
+
         h1 {
             font-size: 25px;
         }
-    
+
         form {
-            > div{
+            >div {
                 margin-bottom: 20px;
             }
 
@@ -25,7 +25,8 @@
                 margin: 5px;
             }
 
-            input:not(input[type='checkbox']), select {
+            input:not(input[type='checkbox']),
+            select {
                 width: 100%;
                 height: 40px;
                 padding: 3px 16px;
@@ -34,13 +35,13 @@
                 border-radius: 10px;
                 background-color: #fafafa;
                 border: 2px solid #f1f1f1;
-        
+
                 &:focus {
                     outline: none;
                     border: 2px solid #dbdbdb;
                 }
             }
-            
+
             input[type='checkbox'] {
                 width: 1.7em;
                 height: 1.7em;
@@ -51,12 +52,12 @@
                 -webkit-appearance: none;
                 outline: none;
                 cursor: pointer;
-        
+
                 &:checked {
                     background-color: #f9d94a;
                 }
             }
-        
+
             p {
                 margin: 0 5px 0;
                 font-size: 12px;
@@ -72,18 +73,23 @@
                 color: white;
                 text-transform: capitalize;
                 border: none;
-        
-                &:hover, 
+
+                &:hover,
                 &:focus {
                     background-color: #3f6bca;
                 }
             }
         }
     }
-    
+
 }
 
 @keyframes opacityChange {
-    0% {opacity: 0%}
-    100% {opacity: 100%}
+    0% {
+        opacity: 0%
+    }
+
+    100% {
+        opacity: 100%
+    }
 }
