--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -21,6 +21,7 @@
             justify-content: space-between;
             padding: 10px 20px;
             position: relative;
+            cursor: pointer;
 
             &:hover:not(.category) {
                 background-color: rgba($color: #000000, $alpha: .1);
